name:                board
version:             0.1.0.0
synopsis:            Board and card games
-- description:
homepage:            https://github.com/benzrf/board
license:             LGPL-3
license-file:        LICENSE
author:              benzrf
maintainer:          benzrf@benzrf.com
-- copyright:
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Game.Board.Internal.Types,
                       Game.Board.Comm,
                       Game.Board.Run
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       containers,
                       mtl,
                       MonadRandom
  hs-source-dirs:      src
  default-language:    Haskell2010
